interface api class

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
             href="/assets/white_marble_horizontal.jpg"
         />
         <link rel="stylesheet" href="/styles/style.css" />
+        <script src="/scripts/interfaceApi.js" defer></script>
         <script src="/scripts/script.js" defer></script>
     </head>
     <body>
-        <div id="mouse_overlay"></div>
+        <!-- <div id="mouse_overlay"></div> -->
 
         <nav class="back_button container">
             <button class="standard_button" onclick="history.back()">
