preload scripts add

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             href="/assets/white_marble_horizontal.jpg"
         />
         <link rel="stylesheet" href="/styles/style.css" />
+        <link rel="preload" href="/scripts/interfaceApi.js" as="script" />
         <script src="/scripts/interfaceApi.js" defer></script>
+        <link rel="preload" href="/scripts/script.js" as="script" />
         <script src="/scripts/script.js" defer></script>
     </head>
     <body>
