flask api in python

--- a/form.html
+++ b/form.html
@@ -12,6 +12,9 @@
             href="/assets/white_marble_horizontal.jpg"
         />
         <link rel="stylesheet" href="/styles/style.css" />
+        <link rel="preload" href="/scripts/interfaceApi.js" as="script" />
+        <script src="/scripts/interfaceApi.js" defer></script>
+        <link rel="preload" href="/scripts/handleForm.js" as="script" />
         <script src="/scripts/handleForm.js" defer></script>
     </head>
     <body>
