--- a/form.html
+++ b/form.html
@@ -5,48 +5,62 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Formulier</title>
-        <link rel="preload" href="/styles/style.css" as="style" />
+        <link rel="preload" href="./styles/style.css" as="style" />
         <link
             rel="preload"
             as="image"
-            href="/assets/white_marble_horizontal.jpg"
+            href="./assets/white_marble_horizontal.jpg"
         />
-        <link rel="stylesheet" href="/styles/style.css" />
-        <link rel="preload" href="/scripts/interfaceApi.js" as="script" />
-        <script src="/scripts/interfaceApi.js" defer></script>
-        <link rel="preload" href="/scripts/handleForm.js" as="script" />
-        <script src="/scripts/handleForm.js" defer></script>
+        <link rel="stylesheet" href="./styles/style.css" />
+        <link rel="preload" href="./scripts/interfaceApi.js" as="script" />
+        <script src="./scripts/interfaceApi.js" defer></script>
+        <link rel="preload" href="./scripts/handleForm.js" as="script" />
+        <script src="./scripts/handleForm.js" defer></script>
     </head>
     <body>
         <nav class="back_button container">
-            <button class="standard_button" onclick="history.back()">
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="icon"
-                    width="66"
-                    height="66"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                >
-                    <line x1="5" y1="12" x2="19" y2="12" />
-                    <line x1="5" y1="12" x2="9" y2="16" />
-                    <line x1="5" y1="12" x2="9" y2="8" />
-                </svg>
-            </button>
+            <a href="index.html">
+                <button class="standard_button">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="icon"
+                        width="66"
+                        height="66"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                    >
+                        <line x1="5" y1="12" x2="19" y2="12" />
+                        <line x1="5" y1="12" x2="9" y2="16" />
+                        <line x1="5" y1="12" x2="9" y2="8" />
+                    </svg>
+                </button>
+            </a>
         </nav>
 
         <main class="form container">
+            <div id="successMessage">
+                <span>success!</span>
+            </div>
             <form id="form">
+                <span class="input container method"
+                    ><select name="method">
+                        <option value="update">PATCH</option>
+                        <option value="new">POST</option>
+                    </select></span
+                >
                 <span class="input container number"
-                    ><input type="number" placeholder="member id" name="m_id"
+                    ><input
+                        type="number"
+                        placeholder="memberId"
+                        name="memberId"
                 /></span>
                 <span class="input container squad"
-                    ><input type="text" placeholder="squad id" name="squad"
+                    ><input type="number" placeholder="squadId" name="squadId"
                 /></span>
                 <span class="input container type">
-                    <select name="type" name="type">
+                    <select name="type">
                         <option value="student">Student</option>
                     </select>
                 </span>
@@ -57,19 +71,19 @@
                     ><input type="text" placeholder="name" name="name"
                 /></span>
                 <span class="input container prefix"
-                    ><input type="text" placeholder="prefix" name="prefix"
+                    ><input type="text" placeholder="predddfix" name="prefix"
                 /></span>
                 <span class="input container surname"
                     ><input type="text" placeholder="surname" name="surname"
                 /></span>
                 <span class="input container avatar"
-                    ><input type="url" placeholder="avatar link" name="avatar"
+                    ><input type="url" placeholder="avatar" name="avatar"
                 /></span>
                 <span class="input container github"
                     ><input
                         type="text"
-                        placeholder="github handle"
-                        name="github"
+                        placeholder="githubHandle"
+                        name="githubHandle"
                 /></span>
                 <span class="input container bio"
                     ><input type="text" placeholder="bio" name="bio"
