--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Visite Kaartje</title>
-        <link rel="preload" href="/styles/style.css" as="style" />
+        <link rel="preload" href="./styles/style.css" as="style" />
         <link
             rel="preload"
             as="image"
-            href="/assets/white_marble_horizontal.jpg"
+            href="./assets/white_marble_horizontal.jpg"
         />
-        <link rel="stylesheet" href="/styles/style.css" />
-        <link rel="preload" href="/scripts/interfaceApi.js" as="script" />
-        <script src="/scripts/interfaceApi.js" defer></script>
-        <link rel="preload" href="/scripts/script.js" as="script" />
-        <script src="/scripts/script.js" defer></script>
+        <link rel="stylesheet" href="./styles/style.css" />
+        <link rel="preload" href="./scripts/interfaceApi.js" as="script" />
+        <script src="./scripts/interfaceApi.js" defer></script>
+        <link rel="preload" href="./scripts/script.js" as="script" />
+        <script src="./scripts/script.js" defer></script>
     </head>
     <body>
         <!-- <div id="mouse_overlay"></div> -->
@@ -40,28 +40,27 @@
         </nav>
 
         <nav class="add_button container">
-            <button
-                class="standard_button"
-                onclick="location.pathname = '/form.html'"
-            >
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="icon"
-                    width="55"
-                    height="55"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                >
-                    <path d="M14 3v4a1 1 0 0 0 1 1h4" />
-                    <path
-                        d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z"
-                    />
-                    <path d="M11 14h1v4h1" />
-                    <path d="M12 11h.01" />
-                </svg>
-            </button>
+            <a href="form.html">
+                <button class="standard_button">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="icon"
+                        width="55"
+                        height="55"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                    >
+                        <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+                        <path
+                            d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z"
+                        />
+                        <path d="M11 14h1v4h1" />
+                        <path d="M12 11h.01" />
+                    </svg>
+                </button>
+            </a>
         </nav>
 
         <aside class="turn_left_button container">
@@ -85,7 +84,7 @@
         <main class="card container">
             <div id="card">
                 <div class="card_front container">
-                    <img src="/assets/avatar.png" />
+                    <img src="./assets/avatar.png" />
                     <hr class="vertical_divider" />
                     <ul>
                         <li><span>Beau Patrick Dekker</span></li>
