verwijzing fix for GH-pages

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Visite Kaartje</title>
-        <link rel="preload" href="./styles/style.css" as="style" />
+        <link rel="preload" href="styles/style.css" as="style" />
         <link
             rel="preload"
             as="image"
-            href="./assets/white_marble_horizontal.jpg"
+            href="assets/white_marble_horizontal.jpg"
         />
-        <link rel="stylesheet" href="./styles/style.css" />
-        <link rel="preload" href="./scripts/interfaceApi.js" as="script" />
-        <script src="./scripts/interfaceApi.js" defer></script>
-        <link rel="preload" href="./scripts/script.js" as="script" />
-        <script src="./scripts/script.js" defer></script>
+        <link rel="stylesheet" href="styles/style.css" />
+        <link rel="preload" href="scripts/interfaceApi.js" as="script" />
+        <script src="scripts/interfaceApi.js" defer></script>
+        <link rel="preload" href="scripts/script.js" as="script" />
+        <script src="scripts/script.js" defer></script>
     </head>
     <body>
         <!-- <div id="mouse_overlay"></div> -->
@@ -84,7 +84,7 @@
         <main class="card container">
             <div id="card">
                 <div class="card_front container">
-                    <img src="./assets/avatar.png" />
+                    <img src="assets/avatar.png" />
                     <hr class="vertical_divider" />
                     <ul>
                         <li><span>Beau Patrick Dekker</span></li>
