--- a/form.html
+++ b/form.html
@@ -5,17 +5,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Formulier</title>
-        <link rel="preload" href="./styles/style.css" as="style" />
+        <link rel="preload" href="styles/style.css" as="style" />
         <link
             rel="preload"
             as="image"
-            href="./assets/white_marble_horizontal.jpg"
+            href="assets/white_marble_horizontal.jpg"
         />
-        <link rel="stylesheet" href="./styles/style.css" />
-        <link rel="preload" href="./scripts/interfaceApi.js" as="script" />
-        <script src="./scripts/interfaceApi.js" defer></script>
-        <link rel="preload" href="./scripts/handleForm.js" as="script" />
-        <script src="./scripts/handleForm.js" defer></script>
+        <link rel="stylesheet" href="styles/style.css" />
+        <link rel="preload" href="scripts/interfaceApi.js" as="script" />
+        <script src="scripts/interfaceApi.js" defer></script>
+        <link rel="preload" href="scripts/handleForm.js" as="script" />
+        <script src="scripts/handleForm.js" defer></script>
     </head>
     <body>
         <nav class="back_button container">
