--- a/form.html
+++ b/form.html
@@ -11,6 +11,7 @@
             as="image"
             href="assets/white_marble_horizontal.jpg"
         />
+        <link rel="preload" as="image" href="assets/floor_background.jpg" />
         <link rel="stylesheet" href="styles/style.css" />
         <link rel="preload" href="scripts/interfaceApi.js" as="script" />
         <script src="scripts/interfaceApi.js" defer></script>
